# traizzle

./: Cargo.toml  readme.md
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
simple_boot/: Cargo.toml
src/: driver.rs  main.rs  utils.rs
src/driver/: console.rs  graphics.rs  io.rs  serial_port.rs
src/driver/graphics/: fonts.rs  framebuffer.rs
src/driver/graphics/fonts/: psf.rs
src/driver/io/: port.rs  serial.rs
src/utils/: asm.rs  debug.rs
