[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# Bootloader included as described here: https://github.com/rust-osdev/bootloader/tree/main/examples/basic

[dependencies]
bootloader-locator = "0.0.4" # for locating the `bootloader` dependency on disk
locate-cargo-manifest = "0.2.0" # for locating the kernel's `Cargo.toml`